[package]
name = "AdventOfCode2025"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.11"
indicatif = { version = "0.17", features = ["rayon"] }

[profile.release]
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

